parser/generated/TParser.cpp
/* parser/listener/visitor header section */

// Generated from TParser.g4 by ANTLR 4.13.2

/* parser precinclude section */

#include "TParserVisitor.h"

#include "TParser.h"


/* parser postinclude section */
#ifndef _WIN32
#pragma GCC diagnostic ignored "-Wunused-parameter"
#endif


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct TParserStaticData final {
  TParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  TParserStaticData(const TParserStaticData&) = delete;
  TParserStaticData(TParserStaticData&&) = delete;
  TParserStaticData& operator=(const TParserStaticData&) = delete;
  TParserStaticData& operator=(TParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag tparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<TParserStaticData> tparserParserStaticData = nullptr;

void tparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (tparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(tparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<TParserStaticData>(
    std::vector<std::string>{
      "sourceFile", "identifier", "declaration", "constDecl", "constSpec", 
      "identifierList", "expressionList", "typeDecl", "typeSpec", "aliasDecl", 
      "typeDef", "typeParameters", "typeParameterDecl", "typeElement", "typeTerm", 
      "functionDecl", "varDecl", "varSpec", "block", "statementList", "statement", 
      "simpleStmt", "expressionStmt", "syncReturnStmt", "emitStmt", "incDecStmt", 
      "assignment", "assign_op", "shortVarDecl", "returnStmt", "breakStmt", 
      "continueStmt", "ifStmt", "typeList", "joinStmt", "matchClause", "matchCase", 
      "fromChanAs", "forStmt", "condition", "forClause", "type_", "typeArgs", 
      "typeName", "typeLit", "arrayType", "arrayLength", "elementType", 
      "sliceType", "asyncChannelType", "syncChannelType", "functionType", 
      "signature", "result", "parameters", "parameterDecl", "expression", 
      "primaryExpr", "conversion", "operand", "literal", "basicLit", "integer", 
      "operandName", "qualifiedIdent", "compositeLit", "literalType", "literalValue", 
      "elementList", "keyedElement", "key", "element", "structType", "fieldDecl", 
      "string_", "embeddedField", "functionLit", "index", "slice_", "arguments", 
      "eos"
    },
    std::vector<std::string>{
      "", "'as'", "'async'", "'break'", "'case'", "'const'", "'continue'", 
      "'else'", "'for'", "'from'", "'func'", "'join'", "'if'", "'nil'", 
      "'return'", "'sync'", "'struct'", "'type'", "'var'", "", "'('", "')'", 
      "'{'", "'}'", "'['", "']'", "'='", "','", "';'", "':'", "'.'", "'++'", 
      "'--'", "':='", "'||'", "'&&'", "'<|'", "'=='", "'!='", "'<'", "'<='", 
      "'>'", "'>='", "'|'", "'/'", "'%'", "'<<'", "'>>'", "'&^'", "'~'", 
      "'!'", "'+'", "'-'", "'^'", "'*'", "'&'", "'<-'"
    },
    std::vector<std::string>{
      "", "AS", "ASYNC", "BREAK", "CASE", "CONST", "CONTINUE", "ELSE", "FOR", 
      "FROM", "FUNC", "JOIN", "IF", "NIL_LIT", "RETURN", "SYNC", "STRUCT", 
      "TYPE", "VAR", "IDENTIFIER", "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", 
      "L_BRACKET", "R_BRACKET", "ASSIGN", "COMMA", "SEMI", "COLON", "DOT", 
      "PLUS_PLUS", "MINUS_MINUS", "DECLARE_ASSIGN", "LOGICAL_OR", "LOGICAL_AND", 
      "SYNC_RETURN", "EQUALS", "NOT_EQUALS", "LESS", "LESS_OR_EQUALS", "GREATER", 
      "GREATER_OR_EQUALS", "OR", "DIV", "MOD", "LSHIFT", "RSHIFT", "BIT_CLEAR", 
      "UNDERLYING", "EXCLAMATION", "PLUS", "MINUS", "CARET", "STAR", "AMPERSAND", 
      "EMIT", "DECIMAL_LIT", "BINARY_LIT", "OCTAL_LIT", "HEX_LIT", "FLOAT_LIT", 
      "DECIMAL_FLOAT_LIT", "HEX_FLOAT_LIT", "IMAGINARY_LIT", "RUNE_LIT", 
      "BYTE_VALUE", "OCTAL_BYTE_VALUE", "HEX_BYTE_VALUE", "LITTLE_U_VALUE", 
      "BIG_U_VALUE", "RAW_STRING_LIT", "INTERPRETED_STRING_LIT", "WS", "COMMENT", 
      "TERMINATOR", "LINE_COMMENT", "WS_NLSEMI", "COMMENT_NLSEMI", "LINE_COMMENT_NLSEMI", 
      "EOS", "OTHER"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  tparserParserStaticData = std::move(staticData);
}

}

TParser::TParser(TokenStream *input) : TParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

TParser::TParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  TParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *tparserParserStaticData->atn, tparserParserStaticData->decisionToDFA, tparserParserStaticData->sharedContextCache, options);
}

TParser::~TParser() {
  delete _interpreter;
}

const atn::ATN& TParser::getATN() const {
  return *tparserParserStaticData->atn;
}

std::string TParser::getGrammarFileName() const {
  return "TParser.g4";
}

const std::vector<std::string>& TParser::getRuleNames() const {
  return tparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& TParser::getVocabulary() const {
  return tparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView TParser::getSerializedATN() const {
  return tparserParserStaticData->serializedATN;
}

/* parser definitions section */

//----------------- SourceFileContext ------------------------------------------------------------------

TParser::SourceFileContext::SourceFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::SourceFileContext::EOF() {
  return getToken(TParser::EOF, 0);
}

std::vector<TParser::EosContext *> TParser::SourceFileContext::eos() {
  return getRuleContexts<TParser::EosContext>();
}

TParser::EosContext* TParser::SourceFileContext::eos(size_t i) {
  return getRuleContext<TParser::EosContext>(i);
}

std::vector<TParser::FunctionDeclContext *> TParser::SourceFileContext::functionDecl() {
  return getRuleContexts<TParser::FunctionDeclContext>();
}

TParser::FunctionDeclContext* TParser::SourceFileContext::functionDecl(size_t i) {
  return getRuleContext<TParser::FunctionDeclContext>(i);
}

std::vector<TParser::DeclarationContext *> TParser::SourceFileContext::declaration() {
  return getRuleContexts<TParser::DeclarationContext>();
}

TParser::DeclarationContext* TParser::SourceFileContext::declaration(size_t i) {
  return getRuleContext<TParser::DeclarationContext>(i);
}

std::vector<TParser::StatementContext *> TParser::SourceFileContext::statement() {
  return getRuleContexts<TParser::StatementContext>();
}

TParser::StatementContext* TParser::SourceFileContext::statement(size_t i) {
  return getRuleContext<TParser::StatementContext>(i);
}


size_t TParser::SourceFileContext::getRuleIndex() const {
  return TParser::RuleSourceFile;
}


std::any TParser::SourceFileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitSourceFile(this);
  else
    return visitor->visitChildren(this);
}

TParser::SourceFileContext* TParser::sourceFile() {
  SourceFileContext *_localctx = _tracker.createInstance<SourceFileContext>(_ctx, getState());
  enterRule(_localctx, 0, TParser::RuleSourceFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(171);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4538502524505652584) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & 387) != 0)) {
      setState(165);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(162);
        functionDecl();
        break;
      }

      case 2: {
        setState(163);
        declaration();
        break;
      }

      case 3: {
        setState(164);
        statement();
        break;
      }

      default:
        break;
      }
      setState(167);
      eos();
      setState(173);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(174);
    match(TParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

TParser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::IdentifierContext::IDENTIFIER() {
  return getToken(TParser::IDENTIFIER, 0);
}


size_t TParser::IdentifierContext::getRuleIndex() const {
  return TParser::RuleIdentifier;
}


std::any TParser::IdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitIdentifier(this);
  else
    return visitor->visitChildren(this);
}

TParser::IdentifierContext* TParser::identifier() {
  IdentifierContext *_localctx = _tracker.createInstance<IdentifierContext>(_ctx, getState());
  enterRule(_localctx, 2, TParser::RuleIdentifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(176);
    match(TParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

TParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TParser::ConstDeclContext* TParser::DeclarationContext::constDecl() {
  return getRuleContext<TParser::ConstDeclContext>(0);
}

TParser::TypeDeclContext* TParser::DeclarationContext::typeDecl() {
  return getRuleContext<TParser::TypeDeclContext>(0);
}

TParser::VarDeclContext* TParser::DeclarationContext::varDecl() {
  return getRuleContext<TParser::VarDeclContext>(0);
}


size_t TParser::DeclarationContext::getRuleIndex() const {
  return TParser::RuleDeclaration;
}


std::any TParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

TParser::DeclarationContext* TParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, TParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(181);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TParser::CONST: {
        enterOuterAlt(_localctx, 1);
        setState(178);
        constDecl();
        break;
      }

      case TParser::TYPE: {
        enterOuterAlt(_localctx, 2);
        setState(179);
        typeDecl();
        break;
      }

      case TParser::VAR: {
        enterOuterAlt(_localctx, 3);
        setState(180);
        varDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDeclContext ------------------------------------------------------------------

TParser::ConstDeclContext::ConstDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::ConstDeclContext::CONST() {
  return getToken(TParser::CONST, 0);
}

std::vector<TParser::ConstSpecContext *> TParser::ConstDeclContext::constSpec() {
  return getRuleContexts<TParser::ConstSpecContext>();
}

TParser::ConstSpecContext* TParser::ConstDeclContext::constSpec(size_t i) {
  return getRuleContext<TParser::ConstSpecContext>(i);
}

tree::TerminalNode* TParser::ConstDeclContext::L_PAREN() {
  return getToken(TParser::L_PAREN, 0);
}

tree::TerminalNode* TParser::ConstDeclContext::R_PAREN() {
  return getToken(TParser::R_PAREN, 0);
}

std::vector<TParser::EosContext *> TParser::ConstDeclContext::eos() {
  return getRuleContexts<TParser::EosContext>();
}

TParser::EosContext* TParser::ConstDeclContext::eos(size_t i) {
  return getRuleContext<TParser::EosContext>(i);
}


size_t TParser::ConstDeclContext::getRuleIndex() const {
  return TParser::RuleConstDecl;
}


std::any TParser::ConstDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitConstDecl(this);
  else
    return visitor->visitChildren(this);
}

TParser::ConstDeclContext* TParser::constDecl() {
  ConstDeclContext *_localctx = _tracker.createInstance<ConstDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, TParser::RuleConstDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(183);
    match(TParser::CONST);
    setState(195);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TParser::IDENTIFIER: {
        setState(184);
        constSpec();
        break;
      }

      case TParser::L_PAREN: {
        setState(185);
        match(TParser::L_PAREN);
        setState(191);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == TParser::IDENTIFIER) {
          setState(186);
          constSpec();
          setState(187);
          eos();
          setState(193);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(194);
        match(TParser::R_PAREN);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstSpecContext ------------------------------------------------------------------

TParser::ConstSpecContext::ConstSpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TParser::IdentifierListContext* TParser::ConstSpecContext::identifierList() {
  return getRuleContext<TParser::IdentifierListContext>(0);
}

tree::TerminalNode* TParser::ConstSpecContext::ASSIGN() {
  return getToken(TParser::ASSIGN, 0);
}

TParser::ExpressionListContext* TParser::ConstSpecContext::expressionList() {
  return getRuleContext<TParser::ExpressionListContext>(0);
}

TParser::Type_Context* TParser::ConstSpecContext::type_() {
  return getRuleContext<TParser::Type_Context>(0);
}


size_t TParser::ConstSpecContext::getRuleIndex() const {
  return TParser::RuleConstSpec;
}


std::any TParser::ConstSpecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitConstSpec(this);
  else
    return visitor->visitChildren(this);
}

TParser::ConstSpecContext* TParser::constSpec() {
  ConstSpecContext *_localctx = _tracker.createInstance<ConstSpecContext>(_ctx, getState());
  enterRule(_localctx, 8, TParser::RuleConstSpec);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(197);
    identifierList();
    setState(203);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 85558276) != 0)) {
      setState(199);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 18449412) != 0)) {
        setState(198);
        type_();
      }
      setState(201);
      match(TParser::ASSIGN);
      setState(202);
      expressionList();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierListContext ------------------------------------------------------------------

TParser::IdentifierListContext::IdentifierListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> TParser::IdentifierListContext::IDENTIFIER() {
  return getTokens(TParser::IDENTIFIER);
}

tree::TerminalNode* TParser::IdentifierListContext::IDENTIFIER(size_t i) {
  return getToken(TParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> TParser::IdentifierListContext::COMMA() {
  return getTokens(TParser::COMMA);
}

tree::TerminalNode* TParser::IdentifierListContext::COMMA(size_t i) {
  return getToken(TParser::COMMA, i);
}


size_t TParser::IdentifierListContext::getRuleIndex() const {
  return TParser::RuleIdentifierList;
}


std::any TParser::IdentifierListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitIdentifierList(this);
  else
    return visitor->visitChildren(this);
}

TParser::IdentifierListContext* TParser::identifierList() {
  IdentifierListContext *_localctx = _tracker.createInstance<IdentifierListContext>(_ctx, getState());
  enterRule(_localctx, 10, TParser::RuleIdentifierList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(205);
    match(TParser::IDENTIFIER);
    setState(210);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TParser::COMMA) {
      setState(206);
      match(TParser::COMMA);
      setState(207);
      match(TParser::IDENTIFIER);
      setState(212);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionListContext ------------------------------------------------------------------
